--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,9 @@ certifi==2024.6.2
 charset-normalizer==3.3.2
 defusedxml==0.7.1
 Django==5.0.6
+django-admin-honeypot-updated-2021==1.2.0
 django-filter==24.2
+django-ipware==7.0.1
 django-modelcluster==6.3
 django-permissionedforms==0.1
 django-taggit==5.0.1
@@ -20,6 +22,7 @@ laces==0.1.1
 openpyxl==3.1.3
 pillow==10.3.0
 pillow_heif==0.16.0
+python-ipware==3.0.0
 pytz==2024.1
 requests==2.32.3
 six==1.16.0
